<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/appTitleText"
        android:layout_width="383dp"
        android:layout_height="133dp"
        android:layout_marginTop="40dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/app_title"
        android:textAlignment="center"
        android:textSize="48sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/pizzaButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="158dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="158dp"
        android:text="@string/pizza"
        app:cornerRadius="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.428"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addToOrderText" />

    <Button
        android:id="@+id/noodlesButton"
        android:layout_width="172dp"
        android:layout_height="49dp"
        android:layout_marginStart="158dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="158dp"
        android:text="@string/nudelgerichte"
        app:cornerRadius="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.516"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pizzaButton" />

    <TextView
        android:id="@+id/addToOrderText"
        android:layout_width="271dp"
        android:layout_height="43dp"
        android:layout_marginTop="40dp"
        android:text="@string/was_m_chtest_du_deiner_bestellung_hinzuf_gen"
        android:textAlignment="center"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appTitleText" />

    <Button
        android:id="@+id/goToBasketButton"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_marginBottom="56dp"
        android:text="@string/warenkorb"
        app:cornerRadius="10dp"
        app:icon="@drawable/ic_baseline_shopping_basket_24"
        app:iconGravity="textEnd"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>